--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: mpy-cross
       run: |
+        sudo apt install build-essential
         git submodule update --init
         cd micropython
         make -C mpy-cross
