--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -11,10 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Copy files and init repo
+    - name: Copy files
       run: |
         cp -r LPK micropython/ports
-        git submodule update --init
     - name: mpy-cross
       run: |
         cd micropython
