--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Copy files and init repo
       run: |
         cp -r LPK micropython/ports
-        git submodle update --init
+        git submodule update --init
     - name: mpy-cross
       run: |
         cd micropython
