--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -33,5 +33,5 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: micropython/ports/LPK/build/firmware.uf2
-        asset_name: 'fimware-${{ matrix.arch }}.uf2'
-        tag: ${{ github.ref }}-${{github.head_ref}}
+        asset_name: 'fimware-${{ matrix.arch }}-${{ github.head_ref }}.uf2'
+        tag: ${{ github.ref }}-${{ github.head_ref }}
