--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,10 +20,11 @@ jobs:
     - name: mpy-cross
       run: |
         cd micropython
-        make -C mpy-cross
+        make -C mpy-cross -j4
+    - name: Install build dep
+      run: sudo apt install -y gcc-arm-none-eabi
     - name: Build
       run: |
-        sudo apt install -y gcc-arm-none-eabi
         cd micropython/ports/LPK
         make BOARD=LPK submodules -j4
         make BOARD=LPK clean -j4
@@ -37,6 +38,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: micropython/ports/LPK/build-PICO/firmware.uf2
-        asset_name: 'fimware-${{ matrix.arch }}-${{ github.ref }}-${{ github.head_ref }}.uf2'
+        asset_name: 'fimware-${{ github.RUNNER_ARCH }}-${{ github.HEAD_REF }}.uf2'
         tag: ${{ github.ref }}
-        body: ${{ github.ref }}-${{ github.head-ref }}
+        body: ${{ github.ref }}-${{ github.head_ref }}
