--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,11 +13,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Copy files and init repo
       run: |
-        git submodule update --init
+        git clone --recursive https://github.com/micropython/micropython
         cp -r LPK micropython/ports
-        cd micropython
-        git submodule update --init
-        cp ../lpk.h lib/pico-sdk/src/boards/include/boards
+        cp lpk.h micropython/lib/pico-sdk/src/boards/include/boards
     - name: mpy-cross
       run: |
         cd micropython
