--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Copy files and init repo
       run: |
         git clone  https://github.com/micropython/micropython
-        cp -r RDK/* micropython/ports/rp2/
+        cp -r RKD/* micropython/ports/rp2/
         cd micropython
         git submodule update --init
-        cp ../rdk.h lib/pico-sdk/src/boards/include/boards
+        cp ../rkd.h lib/pico-sdk/src/boards/include/boards
     - name: mpy-cross
       run: |
         cd micropython
@@ -27,14 +27,14 @@ jobs:
     - name: Build
       run: |
         cd micropython/ports/rp2
-        make BOARD=RDK submodules -j4
-        make BOARD=RDK clean -j4
-        make BOARD=RDK -j4
+        make BOARD=RKD submodules -j$(nproc)
+        make BOARD=RKD clean -j$(nproc)
+        make BOARD=RKD -j$(nproc)
     - name: Upload files to a GitHub release
       uses: svenstaro/upload-release-action@2.3.0
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: micropython/ports/rp2/build-RDK/firmware.uf2
-        asset_name: 'RDK_MPY-fimware-${{ runner.os }}_${{ runner.arch }}-${{ github.ref_name }}-${{ github.run_id }}.uf2'
+        file: micropython/ports/rp2/build-RKD/firmware.uf2
+        asset_name: 'RKD_MPY-fimware-${{ runner.os }}_${{ runner.arch }}-${{ github.ref_name }}-${{ github.run_id }}.uf2'
         body: '${{ github.ref_name }}-${{ github.run_id }}'
         tag: build-${{ github.run_id }}
